Fix image stretching

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -44,3 +44,7 @@ body {
 body {
     margin: 0;
 }
+
+.cover {
+    object-fit: cover;
+}
